# Mlops-project-zenml

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py  tag_registry.py
configuration/: config.yaml
pipeline/: training_pipeline.py
src/: data_cleaning.py  evaluation.py  model_development.py
steps/: clean_data.py  config.py  evaluation.py  ingest_data.py  train_model.py
utils/: tag_manager.py
